# scholardoc-ocr

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  README.md  pyproject.toml
.claude/: AUTOMATION_RECOMMENDATIONS.md  HOOK_SETUP.md  settings.json
.claude/agents/: security-reviewer.md
.claude/skills/gen-test/: SKILL.md
.claude/skills/ocr-debug/: SKILL.md
.github/workflows/: benchmark.yml
.planning/: .continue-here.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/resolved/: mcp-dot-is-no-file.md  tesseract-ocr-output-path-none.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-MILESTONE-AUDIT.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md
.planning/phases/01-foundation-and-data-structures/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-quality-analysis-enhancement/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-ocr-backend-modules/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-engine-orchestration/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-cli-presentation-layer/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-mcp-server-integration/: 06-01-PLAN.md  06-01-SUMMARY.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.serena/: project.yml
scripts/corpus/: build_coverage_matrix.py  render_pages.py
src/levinas_ocr/: __init__.py  cli.py  pipeline.py  processor.py  quality.py
src/scholardoc_ocr/: __init__.py  batch.py  callbacks.py  cli.py  confidence.py  device.py  diagnostics.py  dictionary.py  environment.py  exceptions.py  logging_.py  mcp_server.py  model_cache.py  pipeline.py  postprocess.py  processor.py  quality.py  surya.py  tesseract.py  timing.py  types.py
tests/: conftest.py  test_batch.py  test_callbacks.py  test_device.py  test_environment.py  test_logging.py  test_mcp_server.py  test_model_cache.py  test_pipeline.py  test_postprocess.py  test_processor.py  test_quality.py  test_robustness.py  test_surya.py  test_tesseract.py  test_types.py
tests/benchmarks/: __init__.py  conftest.py  test_inference.py  test_memory.py  test_model_loading.py
tests/corpus/: .gitignore  corpus.json  page_selection.json
(+118 files in other folders)
