[project]
name = "levinas-ocr"
version = "0.1.0"
description = "High-performance OCR pipeline for philosophical texts, optimized for Apple Silicon"
readme = "README.md"
requires-python = ">=3.11,<3.14"  # Avoid 3.14 - too bleeding edge, breaks pi-heif
license = {text = "MIT"}

dependencies = [
    # Core OCR
    "ocrmypdf>=16.0.0",
    "pymupdf>=1.24.0",

    # Surya/Marker for high-quality OCR (optional heavy deps)
    "marker-pdf>=1.0.0",

    # Quality analysis
    "rich>=13.0.0",  # Pretty output
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
levinas-ocr = "levinas_ocr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/levinas_ocr"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
