[project]
name = "scholardoc-ocr"
version = "0.1.0"
description = "High-performance OCR pipeline for academic texts, optimized for Apple Silicon"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}

dependencies = [
    "ocrmypdf>=16.0.0",
    "pymupdf>=1.24.0",
    "marker-pdf>=1.0.0",
    "rich>=13.0.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
ocr = "scholardoc_ocr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scholardoc_ocr"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
