[project]
name = "scholardoc-ocr"
version = "0.2.0"
description = "High-performance OCR pipeline for academic texts, optimized for Apple Silicon"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}

dependencies = [
    "cachetools>=5.0.0",
    "marker-pdf>=1.0.0",
    "ocrmypdf>=16.0.0",
    "psutil>=5.9.0",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "pytest-benchmark>=5.0",
    "pytest-memray>=1.0",
    "memray>=1.0",
]
mcp = ["mcp[cli]"]

[project.scripts]
ocr = "scholardoc_ocr.cli:main"
scholardoc-ocr-mcp = "scholardoc_ocr.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scholardoc_ocr"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
# Benchmark grouping by hardware profile for BENCH-05 baseline selection
# The hardware_profile fixture returns M1/M2/M3/M4/cpu
addopts = "--benchmark-group-by=param:hardware_profile,func --benchmark-min-rounds=3"
